welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:5: error: type mismatch;
 found   : Unit
 required: Int
      return nbCases=nbCases+1
                    ^occurrences:3: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-0 to nums.length-1) {
        ^